--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0px;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -11,4 +15,22 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.storeLocations {
+  border: 3px solid blue;
+}
+
+.employees {
+  border: 3px solid purple;
+}
+
+.candies{
+  border: 3px solid green;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.singleCandy{
+  border: 1px solid red;
 }
