--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
 
 body {
   margin: 0;
-  padding: 0;
+  padding-top: 0;
+  margin-top: 50px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
